Refactor router history handling and update logging levels in configuration files